--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,20 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TextStyle">
+        <item name= "android:layout_width">wrap_content</item>>
+        <item name= "android:layout_height">wrap_content</item>
+        <item name= "android:textSize">22sp</item>
+        <item name= "android:textColor">#4b2e83</item>
+    </style>>
+
+    <style name="Label" parent="@style/TextStyle">
+        <item name = "android:textStyle">bold</item>
+    </style>
+
+    <style name="Gold" parent="@style/Label">
+        <item name="android:colorBackground">#b7a57a</item>
+        <item name="android:textColor">black</item>
+    </style>
+
 </resources>
